# ubr_calibration

./: CHANGELOG.rst  CMakeLists.txt  Doxyfile  README.md  package.xml  setup.py
include/ubr_calibration/: calibration_offset_parser.h  cb_chain_error.h  cb_rgbd_error.h  chain_error.h  chain_functions.h  chain_manager.h  checkerboard_finder.h  depth_camera.h  ground_error.h  led_finder.h  optimizer.h  pcl_conversions.h  rgbd_error.h  update_urdf.h
include/ubr_calibration/capture/: chain_manager.h  checkerboard_finder.h  feature_finder.h  led_finder.h
include/ubr_calibration/ceres/: camera3d_to_arm_error.h  data_functions.h  optimizer.h  outrageous_error.h
include/ubr_calibration/models/: camera3d.h  chain.h
launch/: calibrate.launch  capture_calibration_data.launch
msg/: CalibrationData.msg
scripts/: capture_poses  capture_poses.py  robot_calibration
scripts/analysis/: led_error.py
src/: calibrate.cpp  calibrate_base.cpp  calibration_offset_parser.cpp  capture.cpp  capture_checkerboards.cpp  chain_manager.cpp  checkerboard_finder.cpp  led_finder.cpp  models.cpp  update_urdf.cpp
test/: CMakeLists.txt  test_error_blocks.cpp  test_rotations.cpp  test_update_urdf.cpp
